package Part2;

public interface Copyable {
    public Copyable makeCopy();
}
